# rust-microservice

./: .dockerignore  Cargo.toml  Dockerfile  README.md
k8s/: deployment.yaml  namespace.yaml  service.yaml
src/: main.rs
